--- a/env.example
+++ b/env.example
@@ -259,7 +259,26 @@ NOTIFICATIONS_SMOKE_PHONE=
 SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
-# SMS (Twilio, Unifonic)
+# === SMS PROVIDER CONFIGURATION ===
+# Select SMS provider: twilio, unifonic, or mock
+# For Saudi Arabia (KSA), use unifonic (Twilio has limited KSA support)
+# Default: auto-detect based on configured credentials (prefers unifonic)
+SMS_PROVIDER=unifonic
+# SMS_DEV_MODE=true   # Mock SMS locally (set false to force real SMS)
+
+# --- Unifonic Configuration (Recommended for KSA) ---
+# Unifonic is a leading CPaaS provider in Saudi Arabia and MENA region
+# Get credentials from: https://console.unifonic.com
+UNIFONIC_APP_SID=
+UNIFONIC_SENDER_ID=FIXZIT
+# UNIFONIC_API_URL=https://el.cloud.unifonic.com/rest  # Default API endpoint
+UNIFONIC_TIMEOUT_MS=10000
+UNIFONIC_MAX_ATTEMPTS=3
+UNIFONIC_RETRY_DELAY_MS=500
+
+# --- Twilio Configuration (Limited KSA Support) ---
+# Note: Twilio does not fully support Saudi Arabia (+966) numbers
+# Consider using Unifonic for Saudi operations
 # These must match exactly in Vercel:
 # - TWILIO_ACCOUNT_SID
 # - TWILIO_AUTH_TOKEN
@@ -269,7 +288,6 @@ TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 # NEXTAUTH_TEST_USERS_FALLBACK_PHONE=+966552233456
 # NEXTAUTH_FORCE_OTP_PHONE=+966552233456   # Force all OTP to one phone (testing only)
-# SMS_DEV_MODE=true   # Mock SMS locally when Twilio not configured (set false to force real SMS)
 TWILIO_TIMEOUT_MS=10000
 TWILIO_STATUS_TIMEOUT_MS=5000
 TWILIO_MAX_ATTEMPTS=3
