--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,13 +104,14 @@
   "files.exclude": {
     "**/.git": true,
     "**/.next": true,
-    "**/node_modules": false,
+    "**/node_modules": true,
     "**/out": true,
     "**/build": true,
     "**/dist": true,
     "**/.turbo": true,
     "**/coverage": true,
-    "**/*.tsbuildinfo": true
+    "**/*.tsbuildinfo": true,
+    "**/playwright-report": true
   },
   "files.watcherExclude": {
     "**/.git/objects/**": true,
