--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,22 @@ ALLOW_DEMO_LOGIN=false
 # In production, OTP is always required - configure SMS gateway properly
 # NEXTAUTH_SUPERADMIN_BYPASS_OTP=true
 
+# =============================================================================
+# PRODUCTION OTP BYPASS (USE WITH EXTREME CAUTION)
+# =============================================================================
+# WARNING: Only enable these in controlled environments with additional security controls
+# These allow bypassing SMS OTP verification for superadmin and test users
+# SECURITY: Recommend using IP allowlisting when enabling these options
+
+# Enable OTP bypass for superadmin@fixzit.co in production
+# NEXTAUTH_BYPASS_OTP_ALL=true
+
+# Enable OTP bypass for all demo/test users (use with ALLOW_TEST_USER_OTP_BYPASS)
+# ALLOW_TEST_USER_OTP_BYPASS=true
+
+# The bypass code to use (default: 000000) - change this to a secure value
+# NEXTAUTH_BYPASS_OTP_CODE=000000
+
 # Super Admin fallback phone for OTP (when user has no phone configured)
 # NEXTAUTH_SUPERADMIN_FALLBACK_PHONE=+966500000000
 
