fix: Complete Business.sa theming and CI secrets fallbacks
Theming Fixes:
- Updated .bg-aurora gradient from bronze to Business.sa blue/green
- Updated .glass-button from bronze to Business.sa blue (#0061A8)
- Updated global-error.tsx button/link colors to Business.sa blue

CI Fixes:
- Added fallbacks for PUBLIC_ORG_ID, DEFAULT_ORG_ID, TEST_ORG_ID in e2e-tests.yml
- Ensures CI runs reliably in forks and new setups

All bronze/brown colors (HSL 28/30, rgba(204,127,50)) now replaced with
Business.sa brand colors:
- Primary: #0061A8 (blue)
- Secondary: #00A859 (green)
- Accent: #FFB400 (gold)

Verification: typecheck + lint pass

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -109,9 +109,9 @@ jobs:
       PW_WEB_SERVER: pnpm dev -- --hostname 0.0.0.0 --port 3000
       PW_WEB_PORT: 3000
       PLAYWRIGHT_BROWSERS_PATH: 0
-      PUBLIC_ORG_ID: ${{ secrets.PUBLIC_ORG_ID }}
-      DEFAULT_ORG_ID: ${{ secrets.DEFAULT_ORG_ID }}
-      TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
+      PUBLIC_ORG_ID: ${{ secrets.PUBLIC_ORG_ID || '000000000000000000000001' }}
+      DEFAULT_ORG_ID: ${{ secrets.DEFAULT_ORG_ID || '000000000000000000000002' }}
+      TEST_ORG_ID: ${{ secrets.TEST_ORG_ID || 'test-org-id' }}
 
     steps:
       - name: Checkout
