--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "decimal.js": "^10.6.0",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^4.22.0",
     "express-mongo-sanitize": "^2.2.0",
