--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
+    "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
