fix(build): Add credentials.server.ts stub for production builds
- Create dev/credentials.server.ts with disabled defaults (ENABLED: false)
- Update .gitignore to track the stub file instead of ignoring it
- Remove credentials.server.d.ts (no longer needed with actual implementation)
- This fixes the Vercel build error: Module not found @/dev/credentials.server

SECURITY: The stub exports disabled functions - real credentials should be in
credentials.local.ts which remains gitignored.

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ tsconfig.tsbuildinfo
 *.key
 *.crt
 
-# Dev login credentials (never commit)
+# Dev login credentials (never commit real credentials)
 /app/dev/login-helpers/credentials.ts
-/dev/credentials.server.ts
+/dev/credentials.local.ts
 
 # OS/editor noise
 .DS_Store
