--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -135,6 +135,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Run Drift Guard (tenancy/roles)
+        run: pnpm tsx scripts/check-tenant-role-drift.ts
+
       - name: Get Playwright version
         id: playwright-version
         run: echo "version=$(pnpm list @playwright/test --depth=0 --json | jq -r '.[0].devDependencies["@playwright/test"].version')" >> $GITHUB_OUTPUT
@@ -155,6 +158,17 @@ jobs:
       - name: Install Playwright system dependencies
         if: steps.playwright-cache.outputs.cache-hit == 'true'
         run: pnpm exec playwright install-deps
+
+      - name: Regenerate Playwright storage states
+        env:
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET || secrets.NEXTAUTH_SECRET }}
+          TEST_ORG_ID: ${{ env.TEST_ORG_ID }}
+          DEFAULT_ORG_ID: ${{ env.DEFAULT_ORG_ID }}
+          PUBLIC_ORG_ID: ${{ env.PUBLIC_ORG_ID }}
+          ALLOW_OFFLINE_MONGODB: "true"
+          BASE_URL: "http://localhost:3000"
+        run: pnpm tsx tests/setup-auth.ts
 
       - name: Cache Next.js build
         uses: actions/cache@v4
