--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -67,6 +67,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Run Drift Guard (tenancy/roles)
+        run: pnpm tsx scripts/check-tenant-role-drift.ts
+
       - name: Run Linting
         run: pnpm lint
 
