--- a/package.json
+++ b/package.json
@@ -145,6 +145,8 @@
     "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { const result = execSync('grep -rn \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm 2>/dev/null || true', {encoding: 'utf8'}); if (result.trim()) { console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } } catch(e) { }\"",
     "health": "bash scripts/system-health-check.sh",
     "health:watch": "watch -n 30 'bash scripts/system-health-check.sh'",
+    "lint:weak-passwords": "node scripts/check-weak-passwords.js",
+    "guard:seeds": "node scripts/check-seed-guards.js",
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
