fix(deps): add missing @aws-sdk/client-sns for SMS provider
- Added @aws-sdk/client-sns v3.946.0 for AWS SNS SMS provider
- Fixes build failure: 'Cannot find module @aws-sdk/client-sns'
- Updated translation-audit.json artifact

Build verification: ✅ pnpm build completed successfully

--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "@auth/core": "0.41.0",
     "@aws-sdk/client-s3": "^3.933.0",
     "@aws-sdk/client-secrets-manager": "^3.933.0",
+    "@aws-sdk/client-sns": "^3.946.0",
     "@aws-sdk/middleware-logger": "^3.930.0",
     "@aws-sdk/s3-request-presigner": "^3.933.0",
     "@hello-pangea/dnd": "^18.0.1",
