feat(sms): Add Taqnyat SMS provider integration for Saudi Arabia
- Add Taqnyat provider (lib/sms-providers/taqnyat.ts) with full SMSProvider interface
- Support Bearer Token authentication via TAQNYAT_BEARER_TOKEN env var
- Phone formatting for Saudi numbers (international format without + or 00)
- Single SMS and bulk SMS support (max 1000 recipients per request)
- OTP sending with configurable expiry time
- Balance check and sender list APIs
- Circuit breaker integration for resilience
- Add 'taqnyat' to SMSProviderType union in types.ts
- Update factory to auto-detect and prefer Taqnyat for KSA (CITC compliant)
- Add webhook handler at /api/webhooks/taqnyat/sms for delivery status callbacks
- Update .env.example with TAQNYAT_* configuration variables
- Add comprehensive unit tests (32 tests) for Taqnyat provider

Taqnyat is a CITC-compliant SMS provider in Saudi Arabia, now set as preferred provider.

Environment variables:
- TAQNYAT_BEARER_TOKEN: Bearer token from Taqnyat portal
- TAQNYAT_SENDER_ID: Approved sender name (default: FIXZIT)
- TAQNYAT_WEBHOOK_PHRASE: Webhook confirmation phrase (default: Fixzit)

Documentation: https://dev.taqnyat.sa/en/doc/sms/

--- a/.env.example
+++ b/.env.example
@@ -276,11 +276,23 @@ SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
 # === SMS PROVIDER CONFIGURATION ===
-# Select SMS provider: twilio, unifonic, or mock
-# For Saudi Arabia (KSA), use unifonic (Twilio has limited KSA support)
-# Default: auto-detect based on configured credentials (prefers unifonic)
-SMS_PROVIDER=unifonic
+# Select SMS provider: taqnyat, unifonic, twilio, aws_sns, nexmo, or mock
+# For Saudi Arabia (KSA), use taqnyat (CITC compliant) or unifonic
+# Default: auto-detect based on configured credentials (prefers taqnyat > unifonic)
+SMS_PROVIDER=taqnyat
 # SMS_DEV_MODE=true   # Mock SMS locally (set false to force real SMS)
+
+# --- Taqnyat Configuration (CITC Compliant - Recommended for KSA) ---
+# Taqnyat is a leading SMS provider in Saudi Arabia, fully CITC compliant
+# Get credentials from: https://taqnyat.sa/
+# Documentation: https://dev.taqnyat.sa/en/doc/sms/
+TAQNYAT_BEARER_TOKEN=
+TAQNYAT_SENDER_ID=FIXZIT
+# TAQNYAT_API_URL=https://api.taqnyat.sa  # Default API endpoint
+TAQNYAT_TIMEOUT_MS=10000
+TAQNYAT_MAX_ATTEMPTS=3
+# Webhook configuration for delivery reports
+TAQNYAT_WEBHOOK_PHRASE=Fixzit
 
 # --- Unifonic Configuration (Recommended for KSA) ---
 # Unifonic is a leading CPaaS provider in Saudi Arabia and MENA region
