feat(health): Add health endpoint caching to prevent storms
Added caching layer to /api/health and /api/health/ready endpoints to prevent
health check storms from multiple load balancers or Kubernetes pods.

New features:
- lib/health-cache.ts: In-memory cache with configurable TTL
- /api/health now returns 'cached: true' when serving from cache
- /api/health/ready includes cache status in response
- Cache stats available in diagnostics for authorized callers

Configuration (env):
- HEALTH_CACHE_TTL_MS: Cache TTL for /api/health (default: 5s)
- READY_CACHE_TTL_MS: Cache TTL for /api/health/ready (default: 10s)

Also fixes:
- lib/sms-providers/types.ts: Restored all SMS provider types
- lib/sms-providers/index.ts: Added taqnyat provider info

Verification:
- TypeScript: PASS (0 errors)
- ESLint: PASS (0 errors)
- Health tests: PASS (3/3)

--- a/.env.example
+++ b/.env.example
@@ -323,6 +323,12 @@ NOTIFICATION_DLQ_TTL_DAYS=30
 # Used by: /api/health, /api/health/sms, /api/health/auth
 HEALTH_CHECK_TOKEN=
 
+# Health check caching to prevent storms from multiple LBs/K8s pods
+# Cache TTL for /api/health endpoint (default: 5000ms = 5 seconds)
+HEALTH_CACHE_TTL_MS=5000
+# Cache TTL for /api/health/ready endpoint (default: 10000ms = 10 seconds)
+READY_CACHE_TTL_MS=10000
+
 # === MONITORING & OBSERVABILITY ===
 # Prometheus
 PROMETHEUS_PORT=9090
