--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,109 @@
       "type": "shell",
       "command": "echo 'Problems cleared'",
       "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: Chunk Batches",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "tools/smart-chunker.js"
+      ],
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: Merge Memory",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "tools/merge-memory.js"
+      ],
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: Full Memory Pipeline",
+      "type": "shell",
+      "command": "node tools/smart-chunker.js && echo '\\n📝 Now process each batch in ai-memory/batches/ with Inline Chat (Ctrl+I / Cmd+I)\\n📝 Save outputs to ai-memory/outputs/ as JSON files\\n📝 Then run: node tools/merge-memory.js'",
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: Type Check",
+      "type": "shell",
+      "command": "pnpm typecheck",
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": ["$tsc"]
+    },
+    {
+      "label": "Fixzit: Lint",
+      "type": "shell",
+      "command": "pnpm lint",
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": ["$eslint-stylish"]
+    },
+    {
+      "label": "Fixzit: Unit Tests",
+      "type": "shell",
+      "command": "pnpm test",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: E2E Tests",
+      "type": "shell",
+      "command": "pnpm test:e2e",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Fixzit: Dev Server",
+      "type": "shell",
+      "command": "pnpm dev",
+      "group": "none",
+      "isBackground": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "panel": "dedicated"
+      },
+      "problemMatcher": []
     }
   ]
 }
