--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=8192' ./node_modules/.bin/next dev --turbo",
     "dev:mem": "cross-env NODE_OPTIONS=--max-old-space-size=8192 ./node_modules/.bin/next dev --turbo",
+    "dev:local": "cross-env NODE_OPTIONS=--max-old-space-size=30720 ./node_modules/.bin/next dev --turbo",
     "dev:webpack": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev",
     "dev:clean": "bash scripts/cleanup-dev-cache.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev --turbo",
     "build": "bash scripts/prebuild-cache-clean.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
+    "build:local": "bash scripts/prebuild-cache-clean.sh && cross-env NODE_OPTIONS=--max-old-space-size=30720 NEXT_OUTPUT=standalone next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 50 --ignore-pattern '.next/**' --ignore-pattern 'public/**' --ignore-pattern '_artifacts/**' --ignore-pattern 'deployment/**' --ignore-pattern 'playwright-report/**' --ignore-pattern 'e2e-test-results/**' --ignore-pattern 'qa/**' --ignore-pattern 'scripts/**' --ignore-pattern 'tools/**' --ignore-pattern 'tests/playwright-report/**'",
     "lint:prod": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --max-warnings 0 --report-unused-disable-directives",
@@ -55,6 +57,7 @@
     "verify:org-context": "tsx scripts/verify-org-context.ts && SKIP_GLOBAL_MONGO=true vitest run tests/smoke/org-context-flow.test.tsx tests/server/support/support-org-apis.test.ts",
     "guard:static": "bash scripts/check-org-guards.sh",
     "guard:prod-env": "node scripts/ci/verify-prod-env.js",
+    "vscode:memory-guard": "bash scripts/vscode-memory-guard.sh --monitor",
     "check:route-aliases": "tsx scripts/check-route-aliases.ts",
     "check:route-aliases:json": "tsx scripts/check-route-aliases.ts --json _artifacts/route-aliases.json",
     "archive:route-metrics": "tsx scripts/archive-route-aliases.ts",
@@ -285,6 +288,7 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^3.2.4",
     "webpack": "^5.103.0",
     "zx": "^8.8.5"
