fix(ai-memory): Complete AI Memory system setup
- Fixed VS Code task name checks in memory-selfcheck.js
- Added gitignore entries for generated batch/output files
- Verified all 18 selfcheck tests pass
- Generated 348 batches with 4252 files

Verification:
- pnpm typecheck: ✅ 0 errors
- pnpm lint: ✅ 0 errors
- memory-selfcheck: ✅ 18/18 checks pass

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ docs/translations/translation-audit.csv
 # package-lock.json is intentionally excluded to prevent npm/pnpm conflicts
 # Dependency locking is handled by pnpm-lock.yaml
 package-lock.json
+
+# AI Memory System (generated files - regenerated with smart-chunker)
+ai-memory/batches/*.txt
+ai-memory/batches/manifest.json
+ai-memory/outputs/*.json
