feat(sms): Add Taqnyat webhook, tests, and update .env.example
- Add /api/webhooks/taqnyat endpoint for delivery status callbacks
- Add comprehensive TaqnyatProvider unit tests (16 tests)
- Update .env.example with Taqnyat-only configuration (removed Twilio/Unifonic)
- All 2024 tests passing

--- a/.env.example
+++ b/.env.example
@@ -276,38 +276,22 @@ SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
 # === SMS PROVIDER CONFIGURATION ===
-# Select SMS provider: twilio, unifonic, or mock
-# For Saudi Arabia (KSA), use unifonic (Twilio has limited KSA support)
-# Default: auto-detect based on configured credentials (prefers unifonic)
-SMS_PROVIDER=unifonic
-# SMS_DEV_MODE=true   # Mock SMS locally (set false to force real SMS)
+# Fixzit uses Taqnyat as the ONLY SMS provider (CITC-compliant for Saudi Arabia)
+# Other providers (Twilio, Unifonic) have been removed for compliance.
+# Get credentials from: https://taqnyat.sa
 
-# --- Unifonic Configuration (Recommended for KSA) ---
-# Unifonic is a leading CPaaS provider in Saudi Arabia and MENA region
-# Get credentials from: https://console.unifonic.com
-UNIFONIC_APP_SID=
-UNIFONIC_SENDER_ID=FIXZIT
-# UNIFONIC_API_URL=https://el.cloud.unifonic.com/rest  # Default API endpoint
-UNIFONIC_TIMEOUT_MS=10000
-UNIFONIC_MAX_ATTEMPTS=3
-UNIFONIC_RETRY_DELAY_MS=500
+# Taqnyat API Bearer Token (required for production SMS)
+TAQNYAT_BEARER_TOKEN=
 
-# --- Twilio Configuration (Limited KSA Support) ---
-# Note: Twilio does not fully support Saudi Arabia (+966) numbers
-# Consider using Unifonic for Saudi operations
-# These must match exactly in Vercel:
-# - TWILIO_ACCOUNT_SID
-# - TWILIO_AUTH_TOKEN
-# - TWILIO_PHONE_NUMBER
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_PHONE_NUMBER=
-# NEXTAUTH_TEST_USERS_FALLBACK_PHONE=+966552233456
-# NEXTAUTH_FORCE_OTP_PHONE=+966552233456   # Force all OTP to one phone (testing only)
-TWILIO_TIMEOUT_MS=10000
-TWILIO_STATUS_TIMEOUT_MS=5000
-TWILIO_MAX_ATTEMPTS=3
-TWILIO_RETRY_DELAY_MS=500
+# Taqnyat Sender Name/ID (must be registered with CITC)
+TAQNYAT_SENDER_NAME=FIXZIT
+
+# Optional: Webhook secret for delivery status verification
+TAQNYAT_WEBHOOK_SECRET=
+
+# Development mode: set to true to mock SMS locally without sending
+# Default: true in development, false in production
+SMS_DEV_MODE=true
 
 # Optional webhook to stream notification metrics to dashboards (e.g., Datadog, PagerDuty Events API)
 NOTIFICATIONS_TELEMETRY_WEBHOOK=
