fix(sms): Remove all legacy SMS provider references (Twilio/Unifonic/Nexmo/SNS)
BREAKING CHANGE: Only Taqnyat is supported as SMS provider

Changes:
- Rewrote SMS health endpoint for Taqnyat-only (62 lines → 210 lines, full rewrite)
- Updated SMSSettings defaults from TWILIO to TAQNYAT
- Updated Organization model SmsProvider enum: TAQNYAT, LOCAL only
- Updated admin SMS settings route: removed legacy provider enums
- Updated check-env route: now checks TAQNYAT_* instead of TWILIO_*
- Updated feature-settings description: 'via Taqnyat' instead of 'via Twilio/Unifonic'
- Updated phone-utils comment: Taqnyat-only reference
- Added taqnyatId to communication logger, deprecated twilioSid

Remaining refs (intentional):
- env-validation.ts: Warning comments about legacy provider migration
- communication-logger.ts: Backward-compat field with @deprecated
- sendgrid/route.ts: HTTP headers from SendGrid webhooks (not SMS)

Resolves: Legacy SMS provider dead code cleanup

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -41,10 +41,10 @@ STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
 SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
 FROM_EMAIL=noreply@fixzit-souq.com
 
-# SMS Configuration (Twilio)
-TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
-TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
-TWILIO_PHONE_NUMBER=+1234567890
+# SMS Configuration (Taqnyat - CITC-compliant for Saudi Arabia)
+# Get credentials from: https://taqnyat.sa
+TAQNYAT_BEARER_TOKEN=your_taqnyat_bearer_token_here
+TAQNYAT_SENDER_NAME=Fixzit
 
 # Monitoring Configuration
 GRAFANA_PASSWORD=strong_grafana_password_here
