perf(bundle): Add sideEffects for tree-shaking + bump to v2.0.27
- Added sideEffects field to package.json for better tree-shaking
- Only CSS and instrumentation files marked as having side effects
- Bumped version to 2.0.27

Bundle optimizations already in place:
- optimizePackageImports for 14 packages
- webpackMemoryOptimizations enabled
- No wildcard imports found
- No lodash imports in app folder
- Recharts only used in admin page (lazy loaded by default)

Resolves PF-002

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "fixzit-frontend",
-  "version": "2.0.26",
+  "version": "2.0.27",
+  "sideEffects": [
+    "*.css",
+    "*.scss",
+    "./app/globals.css",
+    "./instrumentation.ts",
+    "./instrumentation-node.ts"
+  ],
   "engines": {
     "node": ">=18.18 <23"
   },
