feat(process): Implement all 7 PROCESS/CI improvements (PROC-001..008)
Implemented:
- PROC-001: Bundle Budget Gate - scripts/checkBundleBudget.mjs (190 lines)
  * Checks gzip sizes of production chunks
  * Configurable thresholds per category
  * Fails CI if budget exceeded

- PROC-002: Playwright Auth Fixtures - tests/e2e/fixtures/auth.fixture.ts (230 lines)
  * Pre-authenticated contexts for 7 roles
  * Storage state validation
  * Reusable across all E2E tests

- PROC-003: i18n CI Gate - Already implemented (verified)
  * .github/workflows/i18n-validation.yml has blocking exit 1

- PROC-005: Local Security Audit Hook - .husky/pre-commit updated
  * Added pnpm audit --audit-level=high (non-blocking warning)

- PROC-006: Alert Thresholds - lib/monitoring/alert-thresholds.ts (260 lines)
  * 20+ thresholds for performance, database, errors, security
  * Business metrics: payment failures, SMS, SLA breaches

- PROC-007: Staging→Prod Release Gate - .github/workflows/release-gate.yml
  * 5-stage pipeline with manual approval gate
  * Staging deployment + smoke tests before production

- PROC-008: PR Template Checklist - .github/pull_request_template.md enhanced
  * Comprehensive checklist: Code, Tests, i18n, Security, Accessibility

Package.json: Added bundle:budget and bundle:budget:report scripts
Report: Updated PENDING_MASTER.md v13.23 - 5 items remaining

Version: 13.23

--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
     "test:stable": "pnpm exec vitest run --reporter=dot --maxWorkers=1 --fileParallelism=false",
     "clean:root": "tsx scripts/janitor.ts --apply",
     "bundle:check": "webpack --config webpack.config.js --mode=production",
+    "bundle:budget": "node scripts/checkBundleBudget.mjs",
+    "bundle:budget:report": "node scripts/checkBundleBudget.mjs --report",
     "seed:marketplace": "tsx scripts/seed-marketplace.ts",
     "seed:prod-data": "tsx scripts/seed-production-data.ts",
     "seed:test": "pnpm exec tsx scripts/seed-test-users.ts",
