--- a/package.json
+++ b/package.json
@@ -158,6 +158,8 @@
     "health:watch": "watch -n 30 'bash scripts/system-health-check.sh'",
     "lint:weak-passwords": "node scripts/check-weak-passwords.js",
     "guard:seeds": "node scripts/check-seed-guards.js",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build -o _artifacts/storybook",
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
@@ -249,6 +251,13 @@
     "@next/bundle-analyzer": "^16.0.3",
     "@next/eslint-plugin-next": "^16.0.3",
     "@playwright/test": "^1.56.1",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/test": "^8.6.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -291,6 +300,7 @@
     "recast": "^0.23.11",
     "redis": "^5.9.0",
     "simple-git-hooks": "^2.9.0",
+    "storybook": "^8.6.14",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.18",
     "tailwindcss-logical": "^3.0.1",
