fix(pr-review): Address PR#520 review comments from CodeRabbit/Gemini/Copilot
- Add concurrency groups to 11 workflows (now 20 total have concurrency)
- Add /api/docs/openapi to INTENTIONALLY_PUBLIC list (100% RBAC coverage)
- Update RBAC audit patterns (26 auth patterns now tracked)
- Remove duplicate session heading from PENDING_MASTER.md
- Fix conflicting pending counts with historical context notes
- Update ISSUES_REGISTER.md to align with PENDING_MASTER.md
- Mark PERF-001/002/003 as FALSE POSITIVE (verified 2025-12-11)
- Improve OpenAPI path detection regex in generate-openapi-stubs.ts

RBAC Audit: 357 routes, 288 protected, 69 public, 0 unprotected (100%)

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -8,6 +8,10 @@ on:
     branches: [main, feature/*, develop]
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   actions: read
