fix(production): resolve 6 medium priority production hardening issues
- ENV-001: Verified GitHub environments referenced in workflows (manual creation needed)
- SENTRY-001: Added Sentry.setContext() for FM and Souq modules in lib/logger.ts
- DD-004: Fixed boolean string comparison with fromJSON() guard in i18n-validation.yml
- DD-012: Verified all 4 .then() chains already have .catch() handlers (no fix needed)
- SEC-001: Extended validateJobSecrets() with webhook secret validation
- MON-001: Created monitoring/grafana/ with dashboards and alert rules

New files:
- monitoring/grafana/README.md - Documentation for Grafana setup
- monitoring/grafana/dashboards/fixzit-overview.json - Application health dashboard
- monitoring/grafana/dashboards/fixzit-database.json - MongoDB metrics dashboard
- monitoring/grafana/dashboards/fixzit-payments.json - Payment gateway dashboard
- monitoring/grafana/alerts/fixzit-alerts.yaml - Prometheus/Grafana alert rules

Resolves: ENV-001, SENTRY-001, DD-004, DD-012, SEC-001, MON-001

--- a/.github/workflows/i18n-validation.yml
+++ b/.github/workflows/i18n-validation.yml
@@ -87,7 +87,7 @@ jobs:
 
       - name: Check translation parity
         id: check-parity
-        if: ${{ !(github.event_name == 'workflow_dispatch' && github.event.inputs.skip_parity_check == 'true') }}
+        if: ${{ !(github.event_name == 'workflow_dispatch' && fromJSON(github.event.inputs.skip_parity_check || 'false')) }}
         continue-on-error: true
         run: |
           echo "📊 Checking translation parity..."
